Added - label and ripples
Changed - scale

Changed - remove tif and console

Changed - remove large image

--- a/src/components/page-main/page-main.css
+++ b/src/components/page-main/page-main.css
@@ -2,3 +2,51 @@
     padding: 0;
     margin: 0 ;
 }
+
+#info{
+    position: absolute;
+    bottom: 1vh;
+    color: teal;
+    width: 100%;
+    font-family: Monospace;
+    text-align: center;
+  }
+  
+  #markerLabel {
+    --baseColor: rgb(255, 250, 250);
+    width: 230px;
+    height: 48px;
+    color: var(--baseColor);
+    font-family: Monospace;
+    font-size: 14px;
+    /*font-weight: 700;*/
+    padding: 2px;
+    background: rgba(0, 0, 0, 0.75);
+    border: 2px solid var(--baseColor);
+    border-radius: 5px;
+    margin-top: -25px;
+    margin-left: 120px;
+    overflow: hidden;
+    padding: 0px;
+  }
+  .hidden{
+    display: none;
+  }
+  
+  .text {
+    margin-left: 4px;
+  }
+  
+  #closeButton{
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    font-family: Arial;
+    font-size: 14px;
+    font-weight: 700;
+    text-align: center;
+    border: 1px solid gray;
+    border-radius: 3px;
+    background: transparent;
+    color: white;
+  }
