--- a/src/components/page-main/page-main.html
+++ b/src/components/page-main/page-main.html
@@ -1,5 +1,11 @@
 
 <section class="page-main">
   <div id="container"></div>
+  <div id="markerLabel" class="hidden" ref="markerLabel">
+    <button id="closeButton" ref="clostBtn">X</button>
+    <div class="text" id="idNum" ref="idNumRef">{{info.id}}</div>
+    <div class="text" id="magnitude" ref="magnitudeRef">{{info.mag}}</div>
+    <div class="text" id="coordinates" ref="coordinatesRef">{{info.coord}}</div>
+  </div>
 </section>
 
