--- a/src/components/page-main/page-main.html
+++ b/src/components/page-main/page-main.html
@@ -4,7 +4,8 @@
   <div id="markerLabel" class="hidden" ref="markerLabel">
     <button id="closeButton" ref="clostBtn">X</button>
     <div class="text" id="idNum" ref="idNumRef">{{info.id}}</div>
-    <div class="text" id="magnitude" ref="magnitudeRef">{{info.mag}}</div>
+    <div class="text" id="date" ref="dateRef">{{info.date}}</div>
+    <div class="text" id="intensity" ref="intensityRef">{{info.mag}}</div>
     <div class="text" id="coordinates" ref="coordinatesRef">{{info.coord}}</div>
   </div>
 </section>
