import quake data

--- a/src/components/page-main/page-main.html
+++ b/src/components/page-main/page-main.html
@@ -4,8 +4,10 @@
   <div id="markerLabel" class="hidden" ref="markerLabel">
     <button id="closeButton" ref="clostBtn">X</button>
     <div class="text" id="idNum" ref="idNumRef">{{info.id}}</div>
+    <div class="text" id="type" ref="typeRef">{{info.type}}</div>
     <div class="text" id="date" ref="dateRef">{{info.date}}</div>
-    <div class="text" id="intensity" ref="intensityRef">{{info.mag}}</div>
+    <div class="text" id="magnitude" ref="magnitudeRef">{{info.mag}}</div>
+    <div class="text" id="depth" ref="depthRef">{{info.depth}}</div>
     <div class="text" id="coordinates" ref="coordinatesRef">{{info.coord}}</div>
   </div>
 </section>
