--- a/src/components/page-main/page-main.html
+++ b/src/components/page-main/page-main.html
@@ -1,6 +1,8 @@
 
 <section class="page-main">
   <div id="container"></div>
+  <button class="test" @click="setTime('1970-04-15 02:09:41','1971-02-04 07:40:55')">test</button>
+  <button class="test2" @click="setTime('1969-11-20 22:17:17','1974-02-18 08:35:27')">test2</button>
   <div id="markerLabel" class="hidden" ref="markerLabel">
     <button id="closeButton" ref="clostBtn">X</button>
     <div class="text" id="idNum" ref="idNumRef">{{info.id}}</div>
