--- a/src/components/page-main/page-main.css
+++ b/src/components/page-main/page-main.css
@@ -1,6 +1,7 @@
 .page-main {
     padding: 0;
     margin: 0 ;
+    position: relative;
 }
 .test{
   position: absolute;
@@ -58,3 +59,4 @@
     background: transparent;
     color: white;
   }
+
