--- a/src/components/page-main/page-main.css
+++ b/src/components/page-main/page-main.css
@@ -2,13 +2,13 @@
     padding: 0;
     margin: 0 ;
 }
-.test{
+.mode0{
   position: absolute;
+  bottom: 0px;
   z-index: 10;
 }
-.test2{
+.type{
   position: absolute;
-  left:200px;
   z-index: 10;
 }
 #info{
