--- a/src/components/page-main/page-main.html
+++ b/src/components/page-main/page-main.html
@@ -1,5 +1,7 @@
 
 <section class="page-main">
+  <div id="labels"></div>
+  <div id="moon"></div>
   <div id="container"></div>
   <div class="mode0" v-if="state.mode == 0">
     <button class="test" @click="setTime('1970-04-15 02:09:41','1971-02-04 07:40:55')">test</button>
