Added - timeline mode 1

--- a/src/components/ui-timeline/ui-timeline.html
+++ b/src/components/ui-timeline/ui-timeline.html
@@ -1,7 +1,7 @@
 
 <section class="ui-timeline">
   <div class="top-block">
-    <apexchart type="rangeBar" height="350" :options="chartOptions" :series="series"></apexchart>
+    <apexchart @dataPointSelection="clickHandler" type="rangeBar" height="200" :events="eventItm" :options="chartOptions" :series="series"></apexchart>
   </div>
   <div class="btm-block">
 
