--- a/src/components/page-main/page-main.html
+++ b/src/components/page-main/page-main.html
@@ -23,12 +23,12 @@
       <div v-if="state.type!=''" class="type">Type:{{state.type}}</div>
     </div>
   </div>
+  <!-- timeline -->
   <div v-if="state.mode == 0" class="timeblock">
-    <!-- timeline -->
-    <!-- <ui-timeline></ui-timeline> -->
     <ui-time-slider :start="dateStart" :end="dateEnd" @updateTime="updateDate($event)" ></ui-time-slider>
-    <!-- <UiTimeSlider></UiTimeSlider> -->
-
+  </div>
+  <div v-else class="timeblock">
+    <ui-timeline v-if="timeEventDatas" @onClick="add_station($event)" :series="timeEventDatas"></ui-timeline>
   </div>
   
 </section>
