--- a/src/components/ui-timeline/ui-timeline.css
+++ b/src/components/ui-timeline/ui-timeline.css
@@ -1,3 +1,10 @@
 .ui-timeline {
-
+    position: absolute;
+    bottom: 0;
+    background: rgba(255,255,255,0.2);
+    padding: 10px;
+    box-sizing: border-box;
+    right: 0;
+    width: 100%;
+    display: inline-block;
 }
