--- a/src/components/page-ref/page-ref.html
+++ b/src/components/page-ref/page-ref.html
@@ -1,5 +1,19 @@
 
 <section class="page-ref">
-  <h1>page-ref Component</h1>
+  <h2 class="title-block">
+    Reference
+  </h2>
+  <div class="detail-block">
+    <div class="card-text-block">
+      <a-card class="card-text-item">
+        <p>Card content</p>
+        <p>Card content Card content Card content Card content Card content Card content Card content Card content</p>
+        <p>Card content</p>
+        <p>Card content Card content Card content Card content Card content Card content Card content Card content</p>
+        <p>Card content</p>
+        <p>Card content Card content Card content Card content Card content Card content Card content Card content</p>
+      </a-card>
+    </div>
+  </div>
 </section>
 
