--- a/src/components/page-main/page-main.css
+++ b/src/components/page-main/page-main.css
@@ -39,22 +39,24 @@
   
   #markerLabel {
     --baseColor: rgb(255, 250, 250);
-    width: 230px;
-    height: 96px;
+    width: 256px;
+    height: 180px;
     color: var(--baseColor);
     font-family: Monospace;
-    font-size: 14px;
+    font-size: 14.5px;
     /*font-weight: 700;*/
-    padding: 2px;
-    background: rgba(0, 0, 0, 0.75);
-    border: 2px solid var(--baseColor);
+    padding-top: 16px;
+    padding-left: 19.5px;
+    background-image: linear-gradient(to bottom, rgb(0, 96, 255,0.75), rgb(0, 96, 255,0.2));
+    border: 2px solid #0060FF;
     border-radius: 5px;
-    margin-top: -60px;
+    margin-top: -100px;
     /* margin-left: 120px; */
-    margin-left: 30px;
+    margin-left: 55;
     overflow: hidden;
-    padding: 0px;
+    /* padding: 0px; */
   }
+  
   .hidden{
     display: none;
   }
@@ -65,13 +67,13 @@
   
   #closeButton{
     position: absolute;
-    right: 0px;
-    top: 0px;
+    right: 2px;
+    top: 2px;
     font-family: Arial;
     font-size: 14px;
     font-weight: 700;
     text-align: center;
-    border: 1px solid gray;
+    border: none;
     border-radius: 3px;
     background: transparent;
     color: white;
