--- a/src/components/page-landing/page-landing.html
+++ b/src/components/page-landing/page-landing.html
@@ -1,5 +1,15 @@
 
 <section class="page-landing">
-  <h1>page-landing Component</h1>
+  <div class="info">
+    <div class="Logo">
+      Moonquakes
+    </div>
+    <div class="title">
+      Explore
+      Moonquackes
+      <button class="start">Start</button>
+    </div>
+  </div>
+  <canvas id="moon"></canvas>
 </section>
 
