--- a/src/components/page-main/page-main.html
+++ b/src/components/page-main/page-main.html
@@ -4,7 +4,7 @@
   <div id="moon"></div>
   <div id="container"></div>
   <select class="typeChange" @change="onChange($event)">
-    <option value="0">有震央{{state.mode}}</option>
+    <option value="0">有震央</option>
     <option value="1">無震央</option>
   </select>
   <div id="markerLabel" class="hidden" ref="markerLabel">
