--- a/src/components/page-landing/page-landing.css
+++ b/src/components/page-landing/page-landing.css
@@ -25,10 +25,10 @@
     letter-spacing: 1px;
 }
 .title{
-    width: 442px;
+    width: 50%;
     height: 309px;
-    margin-top: 278px;
-    margin-left: 129px;
+    /* margin-top: 278px;
+    margin-left: 129px; */
     color: white;
     font-size: 64px;
     letter-spacing: 3px;
@@ -44,4 +44,52 @@
     line-height: 52px;
     background-color: #0060FF;
     border: none;
+}
+
+.shaking {
+	animation: shake 0.2s linear;
+	animation-iteration-count: 2;
+	width: calc(100% - 3em);
+}
+
+.shaking span {
+	animation-duration: 0.2s;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+	display: inline-block;
+}
+
+.falling1 {
+	animation-name: fall1;
+}
+.falling2 {
+	animation-name: fall2;
+}
+.falling3 {
+	animation-name: fall3;
+}
+.falling4 {
+	animation-name: fall4;
+}
+
+@keyframes shake {
+	from, 50%, to {transform: translateX(0);}
+	25% {transform: translateX(0.4em);}
+	75% {transform: translateX(-0.4em);}
+}
+@keyframes fall1 {
+	from {transform: translateY(0) rotate(0deg);}
+	to {transform: translateY(1.5em) rotate(30deg);}
+}
+@keyframes fall2 {
+	from {transform: translateY(0) rotate(0deg);}
+	to {transform: translateY(1.5em) rotate(15deg);}
+}
+@keyframes fall3 {
+	from {transform: translateY(0) rotate(0deg);}
+	to {transform: translateY(1.5em) rotate(-30deg);}
+}
+@keyframes fall4 {
+	from {transform: translateY(0) rotate(0deg);}
+	to {transform: translateY(1.5em) rotate(-15deg);}
 }
