--- a/src/components/page-landing/page-landing.html
+++ b/src/components/page-landing/page-landing.html
@@ -6,8 +6,20 @@
     </div>
     <div class="title">
       Explore
-      Moonquackes
-      <button class="start">Start</button>
+      <div  ref="shake" :class="{shaking:isShake}">
+        <span class="fall" :class="[isShake ? 'falling' + Math.floor(Math.random()*4+1): '']" :style="`animation-delay: ${Math.random()}s`">M</span>
+        <span class="fall" :class="[isShake ? 'falling' + Math.floor(Math.random()*4+1): '']" :style="`animation-delay: ${Math.random()}s`">o</span>
+        <span class="fall" :class="[isShake ? 'falling' + Math.floor(Math.random()*4+1): '']" :style="`animation-delay: ${Math.random()}s`">o</span>
+        <span class="fall" :class="[isShake ? 'falling' + Math.floor(Math.random()*4+1): '']" :style="`animation-delay: ${Math.random()}s`">n</span>
+        <span class="fall" :class="[isShake ? 'falling' + Math.floor(Math.random()*4+1): '']" :style="`animation-delay: ${Math.random()}s`">q</span>
+        <span class="fall" :class="[isShake ? 'falling' + Math.floor(Math.random()*4+1): '']" :style="`animation-delay: ${Math.random()}s`">u</span>
+        <span class="fall" :class="[isShake ? 'falling' + Math.floor(Math.random()*4+1): '']" :style="`animation-delay: ${Math.random()}s`">a</span>
+        <span class="fall" :class="[isShake ? 'falling' + Math.floor(Math.random()*4+1): '']" :style="`animation-delay: ${Math.random()}s`">c</span>
+        <span class="fall" :class="[isShake ? 'falling' + Math.floor(Math.random()*4+1): '']" :style="`animation-delay: ${Math.random()}s`">k</span>
+        <span class="fall" :class="[isShake ? 'falling' + Math.floor(Math.random()*4+1): '']" :style="`animation-delay: ${Math.random()}s`">e</span>
+        <span class="fall" :class="[isShake ? 'falling' + Math.floor(Math.random()*4+1): '']" :style="`animation-delay: ${Math.random()}s`">s</span>
+      </div>
+      <button class="start" @click="onClickStart()">Start</button>
     </div>
   </div>
   <canvas id="moon"></canvas>
