--- a/src/components/ui-time-slider/ui-time-slider.css
+++ b/src/components/ui-time-slider/ui-time-slider.css
@@ -1,17 +1,27 @@
 .ui-time-slider {
-    position: fixed;
+    position: absolute;
     z-index: 10;
     bottom: 0;
-    background-color: rgba(255,255,255,0.2);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.45) 0%, rgba(255, 255, 255, 0) 100%);
     color: #fff;
     width: 100vw;
     box-sizing: border-box;
     padding: 20px;
+    max-width: 90%;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    max-height: 136px;
 }
 .ui-time-slider .label-block{
     display: flex;
     justify-content: space-between;
 }
+:v-deep .slider-connect{
+    background-color: #2F2F2F;
+}
+
+
 
 .ui-time-slider .start-block{
     display: inline-block;
