--- a/src/components/page-layout/page-layout.html
+++ b/src/components/page-layout/page-layout.html
@@ -37,7 +37,7 @@
         <a-layout-content class="layout-main-content">
             <router-view></router-view>
         </a-layout-content>
-        <a-layout-footer style="text-align: center">
+        <a-layout-footer style="text-align: center" v-if="isShowFooter">
           MooooooN ©2022 Created by MooooooN
         </a-layout-footer>
       </a-layout>
