--- a/src/components/ui-time-slider/ui-time-slider.css
+++ b/src/components/ui-time-slider/ui-time-slider.css
@@ -16,6 +16,8 @@
 .ui-time-slider .label-block{
     display: flex;
     justify-content: space-between;
+    height: 20px;
+    overflow: hidden;
 }
 :v-deep .slider-connect{
     background-color: #2F2F2F;
