--- a/src/components/page-main/page-main.css
+++ b/src/components/page-main/page-main.css
@@ -65,19 +65,29 @@
 }
 .eventMode{
   position: absolute;
+  left: 10px;
   z-index: 9;
   top:50px;
-  width: 300px;
-  height: 300px;
+  max-width: 300px;
+  min-height: 120px;
   color: white;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background-image: linear-gradient(to bottom, rgb(0, 96, 255,0.75), rgb(0, 96, 255,0.2));
+  border: 2px solid #0060FF;
+  border-radius: 5px;
+  margin-top: 0;
+  margin-left: 20px;
+  overflow: hidden;
+  padding-bottom: 40px;
+
 }
 .eventMode .info{
   margin-top: 50px;
-  width: 300px;
   display: inline-block;
-  float: right;
   top: 0px;
-  left: 10%;
+  padding-left: 10px;
+  padding-right: 10px;
+  box-sizing: border-box;
 }
 #info{
     position: absolute;
@@ -132,7 +142,9 @@
 }
 
 .page-main .timeblock{
-  position: relative;
+  position: absolute;
+  bottom: 0;
   box-sizing: border-box;
+  width: 100%;
   padding: 0 5%;
 }
