Fixed - moon id ssame

--- a/src/components/page-landing/page-landing.html
+++ b/src/components/page-landing/page-landing.html
@@ -22,6 +22,6 @@
       <button class="start" @click="onClickStart()">Start</button>
     </div>
   </div>
-  <canvas id="moon"></canvas>
+  <canvas id="moonLanding"></canvas>
 </section>
 
